tests/ui/multiple-default-3.fail.stderr
error: `default` may only be used once.
 --> tests/ui/multiple-default-3.fail.rs:5:42
  |
5 |     #[builder(default = "String::new()", default = "String::from(\"hi\")")]
  |                                          ^^^^^^^
